# vavo

./: .gitignore  Cargo.toml  README.md  find_todo_unimplemented.sh
src/: app.rs  assets.rs  commands.rs  entities.rs  events.rs  lib.rs  main.rs  prelude.rs  query.rs  resources.rs  system.rs  time.rs  window.rs  world.rs
src/app/: app.rs  events.rs  input.rs  mod.rs  plugin.rs
src/assets/: assets.rs  handle.rs  loader.rs  mod.rs  shader.rs
src/assets/scene/: macros.rs  mod.rs  proto.rs
src/audio/: apply.rs  commands.rs  manager.rs  mod.rs  sound.rs  spatial.rs  track.rs  update.rs
src/core/: mod.rs  systems.rs
src/core/graph/: data.rs  debug.rs  execute.rs  graph.rs  mod.rs  node.rs  targets.rs
src/core/lighting/: manager.rs  mod.rs  shadow_map.rs  storage.rs
src/core/standard/: atlas.rs  debug.rs  grouped.rs  light_data.rs  mod.rs  movement.rs  (+5 more)
src/ecs/: change_detection.rs  components.rs  mod.rs  ptr.rs  tick.rs
src/event/: event_handler.rs  events.rs  mod.rs  plugin.rs
src/macros/: Cargo.toml
src/math/: bounding_volume.rs  camera.rs  face.rs  light.rs  mod.rs  transform.rs
src/plugins/: mod.rs
src/query/: filter.rs  mod.rs  run.rs
src/reflect/: debug.rs  mod.rs  registry.rs
src/render_assets/: bind_group.rs  buffer.rs  mod.rs  pipeline.rs  render_assets.rs  render_handle.rs  storage.rs  transform_storage.rs
src/renderer/: color.rs  image.rs  material.rs  mesh.rs  mod.rs  newtype.rs  palette.rs  shapes.rs  sphere.rs
src/resources/: mod.rs  resources.rs  tick.rs  time.rs
src/shaders/: debug-shadow.wgsl  shader.wgsl  shadow.wgsl  ui.wgsl
src/state/: conditions.rs  event.rs  mod.rs
src/system/: commands.rs  conflict.rs  context.rs  handler.rs  into.rs  macros.rs  mod.rs  params.rs  scheduler.rs  system.rs  system_new.rs  tasks.rs
src/ui/: image.rs  interactivity.rs  mesh.rs  mod.rs  plugin.rs  prelude.rs
src/window/: app_handler.rs  mod.rs  render.rs  state.rs  window.rs
src/world/: archetype.rs  entities.rs  mod.rs  resources.rs  world.rs
(+57 files in other folders)
