[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.21.0", features = ["derive"] }
glam = "0.29.2"
glyphon = "0.7.0"
image = { version = "0.25.5", features = ["png", "jpeg", "gif", "hdr"], default-features = false }
pollster = "0.4.0"
rand = "0.8.5"
thiserror = "2.0.10"
tobj = "4.0.2"
wgpu = "23.0.1"
winit = "0.30.8"
