[package]
name = "vavo"
version = "0.1.0"
edition = "2021"

[dependencies.vavo_macros]
path = "./src/macros"

[dependencies]
bytemuck = { version = "1.21", features = ["derive"] }
glam = "0.29"
glyphon = "0.8"
image = { version = "0.25", features = ["png", "jpeg", "gif", "hdr"], default-features = false }
pollster = "0.4"
tobj = "4.0"
web-time = "1.1"
wgpu = "24"
winit = "0.30"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# used by tobj
getrandom = { version = "0.2", features = ["js"] }
# unless atomics are enabled, this is a necessary feature and safe to use
wgpu = { version = "24", features = ["fragile-send-sync-non-atomic-wasm"] }
